app/styles/main.css
/* Space out content a bit */
header > h1 {
    margin: 10px 0;
    font-family: 'Open Sans', sans-serif;
}

@media (max-width: 768px) {
  header > h1 {
    font-size: 16px;
  }
}

@media (min-width: 768px) {
  header > h1 {
    font-size: 48px;
  }
}

/* card content*/
.flip-container {
  margin-top: 100px;
  position:relative;
  -webkit-perspective:3000;
  perspective:3000;
}

.flip-container, .card-front, .card-back, .card-front-name, .card-loading {
  width: 307px;
  height: 520px;
}

.flipped {
    -webkit-transform: rotateY(180deg);
    -moz-transform: rotateY(180deg);
    -o-transform: rotateY(180deg);
    transform: rotateY(180deg);
  }

.card {
  -webkit-transition: 0.6s;
  -webkit-transform-style: preserve-3d;
  -moz-transition: 0.6s;
  -moz-transform-style: preserve-3d;
  -o-transition: 0.6s;
  -o-transform-style: preserve-3d;
  transition: 0.6s;
  transform-style: preserve-3d;
  position: relative;
}

.card-front, .card-back, .card-front-name, .card-loading {
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -o-backface-visibility: hidden;
  backface-visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
}

.card-loading {
    z-index: 0;
    background-repeat: no-repeat;
}

.card-back {
  z-index: 2;
  background-repeat: no-repeat;
}

.card-front-name {
  z-index: 1;
  background-repeat: no-repeat;
}

.card-front {
  -webkit-transform: rotateY(180deg);
  -moz-transform: rotateY(180deg);
  -o-transform: rotateY(180deg);
  transform: rotateY(180deg);
  background-repeat: no-repeat;
  z-index: 2;
}

.card-player-class {
  width: 130px;
  height: 50px;
  position: relative;
  top: 450px;
  left: 88px;
   visibility: hidden;
  opacity: 0;
  transition: visibility 0s 0.6s, opacity 0.6s linear;
}

.card-player-class.active {
  visibility: visible;
  opacity: 1;
  transition: opacity 0.6s linear;
}

.card-area-container {
    user-select: none;
    -o-user-select: none;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
}

/* rn-carousel customizations */
.rn-carousel-container {
  overflow: hidden;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/*.rn-carousel-slides {*/
  /*overflow: hidden !important;*/
  /*margin-left: 614px;*/
/*}*/

.rn-carousel-slides {
    -webkit-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    position: relative;
    white-space: nowrap;
    overflow: visible;
    padding: 0;
    margin: 0;
}

.rn-carousel-control {
  font-size: 27.5rem;
  position: absolute;
  top: 9%;
  opacity: 1;
  cursor: pointer;
  color:  #E9CAA0;
}

@media (max-width: 768px) {
    .rn-carousel-control-prev {
      display: none;
    }
    .rn-carousel-control-next {
      display: none;
    }
}

.rn-carousel-control-prev {
    left: 0.95em !important;
  }
  .rn-carousel-control-next {
    left: 2.25em !important;
  }

.rn-carousel-control:hover {
    color: #81562C;
}

.rn-carousel-slide {
  -webkit-backface-visibility: visible !important;
  -ms-backface-visibility: visible !important;
  backface-visibility: visible !important;
}

/*.carousel-card-item {*/
    /*margin: 0 153px 0 154px;*/
/*}*/

/* filter-box content*/
.filter-box {
  border: 1px solid #dddddd !important;
  border-radius: 3px;
  margin-top: 5px;
  padding: 5px 0 3px 15px;
  background-color: #f5f5f5;
  display: inline-block;
  user-select: none;
  -o-user-select: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
}

.filter-box > label {
  font-weight: normal;
}

.filter-box > select {
    margin-left: 5px;
    margin-right: 15px;
}

.filter-title {
  font-size: 1em !important;
  width: auto;
  padding:0 10px;
  border-bottom: none;
  margin-bottom: 0; 
}

.btn-filter {
  height: 34px;
  float: left;
  margin-left: 10px;
  margin-top: 10px;
  width: 64px;
}

.filter-container {

}

/* general */
.error {
  font-size: 24px;
  color: red;
  text-align: center;
}

/* animations */
@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

@keyframes fadeout {
    from { opacity: 1; }
    to   { opacity: 0; }
}

